Changes towards version 0.7:
- Do not rely on GL_UNPACK_SKIP_* arguments, which some OpenGL drivers 
  mishandle (Bug #914) - Michael
- Do not overwrite GLOBAL_SIS (CrewEnlisted) when leaving Hyperspace 
  (Bug #938) - Michael
- Fixed a text entry width problem that was deleting control template 
  names (Bug #947) - Michael
- uio cleanups, documentation - SvdB
- uio path parsing fixes/improvements - SvdB
  - Windows UNC path support (#907)
  - Windows drive-relative paths ("D:path" without a path seperator)
  - treat multiple consecutive path seperators as one (like POSIX)
- config dir no longer needs trailing path seperator (bug #738)- SvdB
- Simplification of uio Stream functions. No more internal seeks. - SvdB
	
Changes towards version 0.6:
- Fixed a bug where an input delay was used for non-network games - SvdB
- Fixed a bug where the victory ditty would end prematurely when UQM
  is compiled without Netplay support - SvdB
- Take $CFLAGS and $LDFLAGS into account for dependency detection
  (they were already used for the building itself) - SvdB
- Validate UQM version of either side of a Netplay game - SvdB
- Better abort and disconnect handling for Netplay - SvdB
- Menu sounds in Setup track rest of game (#922), from Nic - Michael
- Shifted the Mouse Error to a Popup Window, moved the message to
  starcon.txt for translators - Michael
- Generic DoPopupWindow() command for status messages - Michael
- Update the 'current selection' icon after deleting or inserting ships
  in a fleet in SuperMelee - SvdB
- Correct some background pixels in melebkgd.{25,26}.png - SvdB
- Unix build scripts improvements. - SvdB
- Build fixes for MacOS X (with thanks to Nic) - SvdB
- Ships in battle can resume normal speed in all circumstances after
  the enemy Avatar's tractor beam disengages (bug #860; this is a
  netplay desynchronizing change) - Alex
- Conversation summary breaks lines based on actual chars/words
  that fit (bug #916) - Alex